# vek

./: .gitignore  BENCHMARKS.md  BUILD_OPTIMIZED.md  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  MANIFEST.in  PYTHON_INSTALL.md  README.md  benchmark.py  example.py  generate_docs.sh  pyproject.toml  run_benchmark.sh  setup.py
docs/: BUILD.md  benchmarks.rst  conf.py  geometric_primitives.rst  getting_started.rst  index.rst  numpy_integration.rst  quaternions.rst  requirements.txt  vectors.rst
docs/api/: aabb.rst  capsule.rst  frustum.rst  line.rst  matrices.rst  obb.rst  plane.rst  quaternions.rst  ray.rst  triangle.rst  vectors.rst
docs/cpp_api/: a_star.rst  aabb.rst  capsule.rst  collision.rst  frustum.rst  heightfield.rst  index.rst  line.rst  matrices.rst  obb.rst  plane.rst  quaternion.rst  ray.rst  scalar.rst  sphere.rst  triangle.rst  vectors.rst
docs/python/: conf.py  examples.rst  index.rst  matrices.rst  performance.rst  requirements.txt
docs/python/api/: functions.rst  matrices.rst
pyrove/: __init__.py
src/: a_star.cc  a_star.h  aabb.cc  aabb.h  bind_aabb.cc  bind_capsule.cc  bind_frustum.cc  bind_line.cc  bind_matrix.cc  bind_obb.cc  bind_plane.cc  bind_quaternion.cc  bind_ray.cc  bind_sphere.cc  bind_triangle.cc  bind_vec.cc  bresenham_supercover.cc  bresenham_supercover.h  capsule.cc  capsule.h  collision.h  contact_info.cc  contact_info.h  frustum.cc  frustum.h  heightfield.cc  heightfield.h  interval.cc  interval.h  line.cc  line.h  matrix.cc  matrix.h  obb.cc  obb.h  octree.cc  octree.h  plane.cc  plane.h  python_bindings.cc  (+39 more)
