[build-system]
requires = ["scikit-build-core>=0.3.3", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pyrove"
version = "1.0.0"
description = "A C++ math and geometry library for game development and 3D applications with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "rove contributors" }
]
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
]
keywords = ["math", "geometry", "3d", "vector", "matrix", "collision", "pathfinding", "game-development"]

[project.urls]
Homepage = "https://github.com/mnvl/rove"
Repository = "https://github.com/mnvl/rove.git"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.verbose = true
wheel.install-dir = "pyrove"

[tool.scikit-build.cmake.define]
ROVE_BUILD_TESTS = "OFF"
ROVE_BUILD_PYTHON = "ON"
